# bodo-os

./: .env.example  BACKEND_API_GUIDE.md  README.md  RX_DB_INSPIRATION.md  pyproject.toml  spec.md
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_can_create_learning_paths_and_more.py
docs/: learning-path-management.md  learning-path-progress.md  permissions.md
learning/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
learning/migrations/: 0001_initial.py  0002_learningpath_owner.py
main/: settings.py  urls.py
